openmetadata-docs/content/v1.0.0/developers/index.md
---
title: OpenMetadata
slug: /developers
---

# OpenMetadata Development

Here are the articles in this section:

{% inlineCalloutContainer %}
  {% inlineCallout
    color="violet-70"
    icon="play_arrow"
    bold="Architecture"
    href="/developers/architecture" %}
    Overview of the high level architecture of OpenMetadata 
  {% /inlineCallout %}
  {% inlineCallout
    color="violet-70"
    icon="play_arrow"
    bold="Open Source Community"
    href="/developers/open-source-community" %}
    Discover support and meetings about OpenMetadata development 
  {% /inlineCallout %}
  {% inlineCallout
    color="violet-70"
    icon="play_arrow"
    bold="Contribute"
    href="/developers/contribute" %}
    Explore how you can contribute to the ongoing development of OpenMetadata
  {% /inlineCallout %}
  {% inlineCallout
    color="violet-70"
    icon="play_arrow"
    bold="Webhooks"
    href="/developers/webhooks" %}
    Presentation on how to setup webhooks within OpenMetadata
  {% /inlineCallout %}
{% /inlineCalloutContainer %}
